# internal/api/server.go
@@ -197,6 +197,7 @@ func (s *Server) routes() {
 			authG.Post("/auth/logout", s.logoutHandler)
 			authG.Get("/auth/me", s.meHandler)
 			authG.Post("/auth/elevate", s.elevateHandler)
+			authG.Post("/auth/logout-elevation", s.logoutElevationHandler)
 			authG.Get("/auth/org-capabilities", s.getCurrentOrgCapabilities)
 			authG.Get("/capabilities", s.capabilitiesHandler)
 		})
